--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
   </head>
   <body>
-    <div class="root">
-      <h1>hello world</h1>
+    <div id="root">
+      <h1>hello 1</h1>
     </div>
   </body>
+  <script src="../src/index.tsx"></script>
 </html>
